--- a/app/assets/stylesheets/components/welcome.scss
+++ b/app/assets/stylesheets/components/welcome.scss
@@ -12,8 +12,7 @@ body{
 
 .hero-frame {
   max-width: 100%;
-  min-width: 10px;
-  min-height: 600px;
+  min-height: 800px;
   background: url(http://res.cloudinary.com/zach/image/upload/v1484184470/trekmates/8tjbrqgkfyu-david-marcu_bgudkd.jpg);
   -webkit-background-size: cover;
   -moz-background-size: cover;
